--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Styles Conference</title>
 </head>
+
 <body>
   
+  <h1>Styles Conference</h1>
+  
+  <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+<section>
+  <h2>Dedicated to the Craft of Building Websites</h2>
+  <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
+</section>
+
+<section>
+  <section>
+    <h5>Speakers</h5>
+    <h5>World-Class Speakers</h5>
+    <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+  </section>
+</section>
+
+<footer>
+  <small>&copy; Styles Conference</small>
+</footer>
+
 </body>
 </html>
